[package]
name = "x1safe_put_staking"
version = "2.0.0"
description = "X1SAFE-PUT Staking v2.0 - Multi-asset staking vault with flexible lock periods"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "x1safe_put_staking"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
bytemuck = { version = "1.13", features = ["derive"] }

[dev-dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }